# cartoonized_images_project

./: .gitattributes  .gitignore  README.md  create_cartoon_dataset.py  interface_app.py  models.py  pyproject.toml  train_pix2pix.py
best_model_pix2pix/: checkpoint  ckpt-17.index
demo/: demo_clip_link.md
